# Lib_mgt_sys

library-api/: .env.example  .gitignore  pyproject.toml
library-api/app/core/: config.py  database.py
library-api/app/domain/: items.py  loan.py  members.py
library-api/app/repositories/: base.py  item_repository.py
