[project]
name = "library-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Rak5h17a",email = "rr.rakshita.rr@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "motor (>=3.7.1,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
